--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -1,26 +1,31 @@
 user: openproject
 group: openproject
 targets:
-  debian-7: &debian
+  debian-7: &debian7
     build_dependencies:
       - libmagickwand-dev
       - libsqlite3-dev
-  debian-8:
-    <<: *debian
-  ubuntu-14.04:
-    <<: *debian
-  ubuntu-16.04:
+    dependencies:
+      - libmagickwand5
+  debian-8: &debian8
     build_dependencies:
       - libmagickwand-dev
       - libsqlite3-dev
     dependencies:
       - libmagickwand-6.q16-2
-  centos-6: &redhat
+  ubuntu-14.04:
+    <<: *debian7
+  ubuntu-16.04:
+    <<: *debian8
+  centos-6:
     build_dependencies:
       - ImageMagick-devel
-  centos-7:
-    <<: *redhat
     dependencies:
+      - ImageMagick
+  centos-7:
+   build_dependencies:
+      - ImageMagick-devel
+   dependencies:
       - epel-release
       - ImageMagick
   sles-11:
@@ -29,6 +34,8 @@ targets:
   sles-12:
     build_dependencies:
       - ImageMagick-devel
+    dependencies:
+      - ImageMagick
 before_precompile: "packaging/setup"
 crons:
   - packaging/cron/openproject-clear-old-sessions
